--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,6 @@
-<div class="container" style="background-color:white;">
-
+<div class="container" id="editpage" style="background-color:white;">
+<div class="row">
+ <div class="col-sm">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -58,6 +59,9 @@
   </div>
 
 
+   
+
+ 
 
 
 
@@ -83,16 +87,23 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-<div class="container">
-   <% if current_user.avatar.url.present? %>
-    <%= image_tag(current_user.avatar.url, style: 'display: block; margin: auto; width: 100%;') %>
-</div>
+      </div>
+    <div class="col-sm">
+        <% if current_user.avatar.url.present? %>
+    <%= image_tag(current_user.avatar.url, style: 'display: block; margin: auto; width: 350px; height:350px;') %>
+
+
     <%= f.label :remove_avatar do %>
       <%= f.check_box :remove_avatar %>
     <% end %>
   <% end %>
   <%= f.file_field :avatar %>
   <%= f.hidden_field :avatar_cache %>
+    </div>
+    <div class="col-sm">
+    
+
+ 
 
   <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
@@ -109,4 +120,6 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+    </div>
+ </div>
 </div>
