--- a/app/views/partials/_game.html.erb
+++ b/app/views/partials/_game.html.erb
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="row">
 	<% @users.each do |card| %>
-    <div class="col-">
+    <div class="col">
       <div class="flip">
         <div class="card"> 
           <div class="face front"> 
@@ -29,7 +29,7 @@
     <% end %>
 	<% @users.shuffle.each do |card| %>
 
-		<div class="col-">
+		<div class="col">
       <div class="flip">
         <div class="card"> 
           <div class="face front"> 
