--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,3 +74,18 @@ html {
     padding-left: 0px;
     flex-grow: 0;
 }
+
+.container {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+#maincontainer {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+.row {
+    // margin-left: 0px;
+    // margin-right: 0px;
+}
