--- a/app/views/partials/_game.html.erb
+++ b/app/views/partials/_game.html.erb
@@ -10,7 +10,7 @@
 
   
 
-<div class="container">
+<div class="container" id="maincontainer">
   <div class="row">
 	<% @users.each do |card| %>
     <div class="col">
