--- a/app/views/partials/_game.html.erb
+++ b/app/views/partials/_game.html.erb
@@ -8,7 +8,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['GOOGLE_MAPS_API']%>&callback=initMap"></script>
  
 
-  
+<div id="loading" class="loader">Loading...</div>
 
 <div class="container" id="maincontainer">
   <div class="row">
