chamges js so card not flipping until load

--- a/app/views/partials/_game.html.erb
+++ b/app/views/partials/_game.html.erb
@@ -10,7 +10,7 @@
 
 <div id="loading" class="loader">Loading...</div>
 
-<div class="container" id="maincontainer">
+<div class="container" id="maincontainer" style="display:none;">
   <div class="row">
 	<% @users.each do |card| %>
     <div class="col">
