--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,11 +85,10 @@ html {
     padding-left: 0px;
 }
 
-.row {
-    // margin-left: 0px;
-    // margin-right: 0px;
-}
-
+// .row {
+// margin-left: 0px;
+// margin-right: 0px;
+// }
 .loader {
     color: #ffffff;
     font-size: 90px;
@@ -98,7 +97,7 @@ html {
     width: 1em;
     height: 1em;
     border-radius: 50%;
-    margin: 72px auto;
+    margin: 220px auto;
     position: relative;
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
