set timeout for click event

--- a/app/views/partials/_game.html.erb
+++ b/app/views/partials/_game.html.erb
@@ -14,7 +14,7 @@
   <div class="row">
 	<% @users.each do |card| %>
     <div class="col">
-      <div class="flip">
+      <div class="flip" id="flipid">
         <div class="card"> 
           <div class="face front"> 
 
